Fix gaps in bookshelf grid
Filtering bookshelf items was creating gaps that now have been fixed.

--- a/bookshelf/bookshelf-style.css
+++ b/bookshelf/bookshelf-style.css
@@ -214,7 +214,8 @@ nav input[type="checkbox"] {
 }
 
 .placeholder {
-  opacity: 0%;
+  opacity: 100%;
+  background-color: var(--main-bg-color);
 }
 
 /* Rating overlay
